Add real-time site metrics dashboard and API
Expose a live metrics endpoint and add a React dashboard to display real-time access counts.

Backend:
- Add GET /sn/{siteId}/metrics/live in TurSNSiteMetricsAPI that returns access counts grouped into 30s buckets for the last hour.
- Add repository methods in TurSNSiteMetricAccessRepository (findByTurSNSiteIdAndAccessDateAfter and findRecentMetrics) and necessary imports.
- Enable metrics in application.yaml (turing.search.engine.metrics.enabled = true).

Frontend:
- Add RealTimeDashboardPage component with a Recharts line chart that polls the live metrics every 30s.
- Register new DASHBOARD route and wire it in App.tsx.
- Add MetricDataLive model and a live() method in TurSNSiteMetricsService to fetch live metrics.

These changes provide a live, updating visual of site access activity for semantic navigation sites.

--- a/turing-app/src/main/resources/application.yaml
+++ b/turing-app/src/main/resources/application.yaml
@@ -113,7 +113,7 @@ turing:
   search:
     engine:
       type: solr
-    metrics.enabled: false
+    metrics.enabled: true
     cache:
       ttl:
         seconds: 86400000
